# face-giffer

./: .gitignore  AGENTS.md  README.md  main.py  prompt.md  pyproject.toml
src/: __init__.py  download_model.py  face_alignment.py  normalization.py  preprocessing.py  settings.py
